# guru

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  USAGE.md  migrate.sh  mise.toml  pyproject.toml
.agents/: AGENTS.md
.claude/: settings.json
.claude/skills/create-github-issue/: SKILL.md
.claude/skills/curate-usage-md/: SKILL.md
.claude/skills/raise-bug-issue/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml
.github/agents/: bug-fixer.agent.md  bug-fixer.md
.github/workflows/: ci.yml  claude-code-review.yml  copilot-setup-steps.yml  pr-lint.yml  release.yml
.superpowers/brainstorm/80978-1776506189/content/: graph-navigation-models.html
.superpowers/brainstorm/80978-1776506189/state/: server-info  server-stopped
docs/: INIT.md
docs/superpowers/plans/: 2026-04-09-guru-mvp.md  2026-04-09-packaging-distribution.md  2026-04-10-background-indexing.md  2026-04-10-server-logging.md  2026-04-14-worktree-speed-embedding-cache.md  2026-04-17-graph-plugin.md  2026-04-18-artifact-graph-knowledge-base.md  2026-04-18-graph-readonly-cli.md  2026-04-18-knowledge-workbench-tui.md  2026-04-18-knowledge-workbench-web-ui.md  2026-04-18-test-strategy-sandbox.md  2026-04-19-dev-mode.md  2026-04-19-web-ui-refinement.md
docs/superpowers/specs/: 2026-04-09-guru-architecture-design.md  2026-04-09-packaging-distribution-design.md  2026-04-10-background-indexing-design.md  2026-04-10-server-logging-design.md  2026-04-14-worktree-speed-embedding-cache-design.md  2026-04-17-graph-plugin-design.md  2026-04-18-artifact-graph-knowledge-base-design.md  2026-04-18-graph-readonly-cli-design.md  2026-04-18-knowledge-workbench-tui-design.md  2026-04-18-knowledge-workbench-web-ui-design.md  2026-04-19-dev-mode-design.md  2026-04-19-web-ui-refinement-design.md
scripts/: generate_index.py  run-behave-parallel.sh  start-test-neo4j.sh  test-generate-index.py
simple/: index.html
simple/guru/: index.html
simple/guru-cli/: index.html
simple/guru-core/: index.html
simple/guru-mcp/: index.html
simple/guru-server/: index.html
src/guru/: __init__.py
tests/: test_ci_workflow.py  test_e2e_capabilities.py  test_e2e_inprocess_server.py  test_integration.py  test_packaging.py
tests/e2e/: test_cli_e2e.py
tests/e2e/features/: annotations_and_curation.feature  artifact_indexing.feature  artifact_links.feature  background_indexing.feature  cache_cli.feature  capabilities.py  constitution_invariants.feature  environment.py  federation_clone.feature  federation_discovery.feature  federation_search.feature  gitignore_discovery.feature  graph_cli_reads.feature  graph_mcp_tools.feature  graph_optional.feature  graph_plugin.feature  hybrid_search.feature  knowledge_base.feature  knowledge_workbench_tui.feature  mcp_tools.feature  orphan_triage.feature  parser_extensibility.feature  semantic_search.feature  skill_distribution.feature  sync_invariant.feature  web_documents.feature  web_graph.feature  web_smoke.feature  web_status.feature  worktree_cache.feature
tests/e2e/features/steps/: annotation_steps.py  artifact_steps.py  background_indexing_steps.py  cache_steps.py  cli_steps.py  constitution_steps.py  federation_steps.py  gitignore_steps.py  graph_cli_reads_steps.py  graph_mcp_tools_steps.py  graph_optional_steps.py  graph_steps.py  mcp_steps.py  orphan_steps.py  parser_extensibility_steps.py  relates_steps.py  skill_steps.py  sync_steps.py  tui_steps.py  web_documents_steps.py  web_graph_steps.py  web_status_steps.py  web_steps.py
tests/e2e/fixtures/polyglot/: guru.json
tests/e2e/fixtures/polyglot/api/: openapi.yaml
tests/e2e/fixtures/polyglot/docs/: guide.md
tests/e2e/fixtures/polyglot/src/pkg/: auth.py
tests/e2e/fixtures/polyglot/src/pkg/services/: user.py
tests/e2e/fixtures/protobuf_parser/: parser.py  user.proto
wheels/: guru-0.0.1-py3-none-any.whl  guru-0.1.0-py3-none-any.whl  guru-0.1.1-py3-none-any.whl  guru-0.1.2-py3-none-any.whl  guru-0.1.3-py3-none-any.whl  guru-0.2.0-py3-none-any.whl  guru-0.2.1-py3-none-any.whl  guru-0.2.2-py3-none-any.whl  guru-0.2.3-py3-none-any.whl  guru_cli-0.0.1-py3-none-any.whl  guru_cli-0.1.0-py3-none-any.whl  guru_cli-0.1.1-py3-none-any.whl  guru_cli-0.1.2-py3-none-any.whl  guru_cli-0.1.3-py3-none-any.whl  guru_cli-0.2.0-py3-none-any.whl  guru_cli-0.2.1-py3-none-any.whl  guru_cli-0.2.2-py3-none-any.whl  guru_cli-0.2.3-py3-none-any.whl  guru_core-0.0.1-py3-none-any.whl  guru_core-0.1.0-py3-none-any.whl  guru_core-0.1.1-py3-none-any.whl  guru_core-0.1.2-py3-none-any.whl  guru_core-0.1.3-py3-none-any.whl  guru_core-0.2.0-py3-none-any.whl  guru_core-0.2.1-py3-none-any.whl  guru_core-0.2.2-py3-none-any.whl  guru_core-0.2.3-py3-none-any.whl  guru_mcp-0.0.1-py3-none-any.whl  guru_mcp-0.1.0-py3-none-any.whl  guru_mcp-0.1.1-py3-none-any.whl  guru_mcp-0.1.2-py3-none-any.whl  guru_mcp-0.1.3-py3-none-any.whl  guru_mcp-0.2.0-py3-none-any.whl  guru_mcp-0.2.1-py3-none-any.whl  guru_mcp-0.2.2-py3-none-any.whl  guru_mcp-0.2.3-py3-none-any.whl  guru_server-0.0.1-py3-none-any.whl  guru_server-0.1.0-py3-none-any.whl  guru_server-0.1.1-py3-none-any.whl  guru_server-0.1.2-py3-none-any.whl  (+5 more)
