[project]
name = "guru"
dynamic = ["version", "dependencies"]
description = "Local-first knowledge base manager with MCP interface"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = [
    "guru-core=={{ version }}",
    "guru-server=={{ version }}",
    "guru-mcp=={{ version }}",
    "guru-cli=={{ version }}",
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["src/guru"]

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "src/"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
guru-core = { workspace = true }
guru-server = { workspace = true }
guru-mcp = { workspace = true }
guru-cli = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib -m 'not slow'"
markers = [
    "slow: end-to-end tests that start a real server (deselected by default, run with: -m slow)",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py313"
line-length = 99
src = ["packages/guru-core/src", "packages/guru-server/src", "packages/guru-mcp/src", "packages/guru-cli/src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["guru_core", "guru_server", "guru_mcp", "guru_cli"]
